--- a/Main.html
+++ b/Main.html
@@ -12,8 +12,10 @@
         <canvas id="canvas" width="1280" height="720" style="border: solid 1px black;">
 
         </canvas>
+        
         <script src="Playground.js"></script>
         <script src="Simulation.js"></script>
+        <script src="Vector2.js"></script>
 
         <script>
             var canvas = document.getElementById("canvas");
@@ -52,7 +54,7 @@
 
             canvas.addEventListener('mousemove', function(evt){
                 let mouse = getMousePos(canvas, evt);
-                playground.onMouseMove(mouse.x, mouse.y);
+                playground.onMouseMove(new Vector2(mouse.x, mouse.y));
             }, false)
 
             canvas.addEventListener('mousedown', function(evt){
