--- a/Main.html
+++ b/Main.html
@@ -12,10 +12,10 @@
         <canvas id="canvas" width="1280" height="720" style="border: solid 1px black;">
 
         </canvas>
-        
         <script src="Playground.js"></script>
         <script src="Simulation.js"></script>
         <script src="Vector2.js"></script>
+        <script src="DrawUtils.js"></script>
 
         <script>
             var canvas = document.getElementById("canvas");
