--- a/Main.html
+++ b/Main.html
@@ -16,6 +16,7 @@
         <script src="Simulation.js"></script>
         <script src="Vector2.js"></script>
         <script src="DrawUtils.js"></script>
+        <script src="Particle.js"></script>
 
         <script>
             var canvas = document.getElementById("canvas");
