--- a/Main.html
+++ b/Main.html
@@ -12,11 +12,11 @@
         <canvas id="canvas" width="1280" height="720" style="border: solid 1px black;">
 
         </canvas>
-        <script src="Playground.js"></script>
-        <script src="Simulation.js"></script>
-        <script src="Vector2.js"></script>
-        <script src="DrawUtils.js"></script>
-        <script src="Particle.js"></script>
+        <script src="Playground.js?v=1.0.1"></script>
+        <script src="Simulation.js?v=1.0.1"></script>
+        <script src="Vector2.js?v=1.0.1"></script>
+        <script src="DrawUtils.js?v=1.0.1"></script>
+        <script src="Particle.js?v=1.0.1"></script>
 
         <script>
             var canvas = document.getElementById("canvas");
@@ -31,6 +31,7 @@
             mainLoop();
 
             function updatePlayground(dt){
+                Clear();
                 playground.update(dt);
                 playground.draw();
             }
@@ -43,6 +44,11 @@
 
                 updatePlayground(deltaTime);
                 lastTime= currentTime;
+            }
+            
+            function Clear(){
+                ctx.fillStyle="#242321";
+                ctx.fillRect(0, 0, canvas.width, canvas.height);
             }
 
             function getMousePos(canvas, evt) {
