--- a/Main.html
+++ b/Main.html
@@ -17,7 +17,7 @@
         <script src="Vector2.js?v=1.0.1"></script>
         <script src="DrawUtils.js?v=1.0.1"></script>
         <script src="Particle.js?v=1.0.1"></script>
-        <script src="FluidHashGrid.js"></script>
+        <script src="FluidHashGrid.js?v=1.0.1"></script>
 
 
 
