--- a/Main.html
+++ b/Main.html
@@ -12,12 +12,13 @@
         <canvas id="canvas" width="1280" height="720" style="border: solid 1px black;">
 
         </canvas>
-        <script src="Playground.js?v=1.0.1"></script>
+        <script src="Playground.js?v=1.0.2"></script>
         <script src="Simulation.js?v=1.0.1"></script>
         <script src="Vector2.js?v=1.0.1"></script>
         <script src="DrawUtils.js?v=1.0.1"></script>
         <script src="Particle.js?v=1.0.1"></script>
         <script src="FluidHashGrid.js?v=1.0.1"></script>
+        <script src="ParticleEmitter.js?v=1.0.1"></script>
 
 
 
@@ -68,7 +69,11 @@
             }, false)
 
             canvas.addEventListener('mousedown', function(evt){
-                playground.onMouseDown(evt.button);
+                if(evt.button == 1){
+                    playground.onMiddleMouseBtnDown();
+                }else{
+                    playground.onMouseDown(evt.button);
+                }
             }, false)
 
             canvas.addEventListener('mouseup', function(evt){
