--- a/Main.html
+++ b/Main.html
@@ -52,8 +52,7 @@
             }
             
             function Clear(){
-                ctx.fillStyle="#242321";
-                ctx.fillRect(0, 0, canvas.width, canvas.height);
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
             }
 
             function getMousePos(canvas, evt) {
